--- a/test.css
+++ b/test.css
@@ -1,138 +1,151 @@
+/** {
+  margin: 0;
+  padding: 0;
+  background-color: #2f2f2f;
+}
+.main {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+}
+.d1 {
+  position: absolute;
+  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-size: 2700px 1500px;
+
+  height: 30vh;
+  width: 15vw;
+
+  background-position: 0 50%;
+
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 2;
+  animation: dd1 10s 1, dd12 10s 1;
+  animation-delay: 4s, 14s;
+}
+.d2 {
+  position: absolute;
+  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-size: 2700px 1500px;
+
+  height: 50vh;
+  width: 25vw;
+
+  background-position: -10vw 50%;
+  left: 10vw;
+
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  animation: dd2 10s 2;
+  animation-delay: 4s;
+}
+.d3 {
+  position: absolute;
+  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-size: 2700px 1500px;
+  overflow: hidden;
+
+  height: 100vh;
+  width: 40vw;
+  left: 25vw;
+  box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.8);
+  background-position: -35vw 50%;
+
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 3;
+  animation: dd3 10s 2;
+  animation-delay: 4s;
+}
+.d4 {
+  position: absolute;
+  overflow: hidden;
+  background-image: url(https://newevolutiondesigns.com/images/freebies/4k-wallpaper-3.jpg);
+  background-size: 2700px 1500px;
+
+  height: 80vh;
+  width: 25vw;
+  left: 60vw;
+  background-position: -70vw 50%;
+
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  animation: dd4 10s 2;
+  animation-delay: 4s;
+}
+
+@keyframes dd1 {
+  0% {
+  }
+  50% {
+    width: 95vw;
+  }
+}
+@keyframes dd12 {
+  0% {
+  }
+  50% {
+    background-position: Calc(0vw - 40px) 50%;
+  }
+}
+@keyframes dd2 {
+  0% {
+  }
+  50% {
+    background-position: Calc(-10vw - 40px) 50%;
+  }
+}
+@keyframes dd3 {
+  0% {
+  }
+  50% {
+    background-position: Calc(-35vw - 40px) 50%;
+  }
+}
+@keyframes dd4 {
+  0% {
+  }
+  50% {
+    background-position: Calc(-70vw - 40px) 50%;
+  }
+}*/
+
+
+
+:root {
+  --direction: -45deg;
+}
+
 body {
-  background: #000;
+  margin: 0;
+  padding: 0;
 }
 
+main {
+  position: relative;
+}
 
-svg {
-  height: 140%;
-  // height: 100vh;
-  display: block;
+div {
   position: absolute;
+  top: 0;
   left: 0;
-  top: -100px;
-  // background-color: #333;
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+  background-repeat: none;
 }
 
-.title-block {
-  position: absolute;
-  left: 50%;
-  top: 45%;
-  .title {
-    position: relative;
-    left: -50%;
-    color: #fff;
-    text-align: center;
-    font-family: 'Lato';
-    // font-weight: 300;
-    letter-spacing: 5px;
-  }
+.background {
+  background-image: url(images/21032487_1241309209308512_3850808109551969394_n.jpg);
 }
 
-
-#top {
-  // display: none;
-  .st48,
-  .st52,
-  .st50{
-    animation: drift-right-up 80s alternate;
-  }
-  .st33,
-  .st51 {
-    animation: drift-right-up 75s alternate;
-  }
-  .st49,
-  .st42 {
-    animation: drift-right-up 65s alternate;
-  }
-
+.foreground {
+  background-image: url(https://source.unsplash.com/1600x900/?night);
+  mask-image: linear-gradient(var(--direction), rgba(0,0,0,1) 40%, rgba(0,0,0,0) 60%);
+  mask-position: 50% 50%;
 }
 
-#bottom {
-  // display: none;
-  .st11,
-  .st56 {
-    animation: drift-down 70s alternate;
-  }
-  .st53,
-  .st54{
-    animation: drift-right 195s alternate;
-  }
-  .st55,
-  .st36,
-  .st33 {
-    animation: drift-down 115s alternate;
-  }
-  .st51 {
-    animation: drift-down-right 105s alternate;
-  }
-}
-
-#nearright {
-  // display: none;
-  .st40,
-  .st43,
-  .st33{
-    animation: drift-right 115s;
-  }
-  .st41,
-  .st44 {
-    animation: drift-right-up 105s;
-  }
-  .st42,
-  .st45,
-  .st46,
-  .st55,
-  .st47{
-    animation: drift-right 135s;
-  }
-}
-
-#farright {
-  // display: none;
-  .st54,
-  .st58,
-  .st59{
-    animation: drift-right 55s;
-  }
-  .st57,
-  .st51 {
-    animation: drift-right-up 40s;
-  }
-}
-
-
-@keyframes drift-right {
-  100% {
-    transform: translate(2000px, -20px);
-  }
-}
-
-@keyframes drift-right-up {
-  100% {
-    transform: translate(2000px, -250px);
-  }
-}
-
-@keyframes drift-up {
-  100% {
-    transform: translate(10px, -1450px);
-  }
-}
-
-@keyframes drift-up-right {
-  100% {
-    transform: translate(175px, -1550px);
-  }
-}
-
-@keyframes drift-down {
-  100% {
-    transform: translate(2000px, 1220px);
-  }
-}
-
-@keyframes drift-down-right {
-  100% {
-    transform: translate(1450px, 320px);
-  }
-}
