--- a/test.css
+++ b/test.css
@@ -116,7 +116,7 @@
 
 
 
-:root {
+/*:root {
   --direction: -45deg;
 }
 
@@ -147,5 +147,60 @@ div {
   background-image: url(https://source.unsplash.com/1600x900/?night);
   mask-image: linear-gradient(var(--direction), rgba(0,0,0,1) 40%, rgba(0,0,0,0) 60%);
   mask-position: 50% 50%;
+}*/
+main {
+  position: relative;
+  width: 100vw;
+  min-height: 100vh;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+  &:hover {
+    opacity: .6;
+  }
+}
+
+.credit {
+  position: absolute;
+  top: 2%;
+  left: 2%;
+  color: rgba(white,.4);
+  p {
+    margin: 0;
+    font-size: .8em;
+    text-transform: uppercase;
+    letter-spacing: .08em;
+  }
+}
+
+.img {
+  width: 80%;
+  height: auto;
+  position: absolute;
+  // cursor: none;
+  transition: 650ms ease;
+  &-01 {
+    z-index: 2;
+  }
+  &-02 {
+    z-index: 1;
+    opacity: 0;
+    pointer-events: none;
+    filter: blur(100px);
+  }
+}
+
+.img-01:hover {
+  opacity: 0;
+}
+
+.img-01:hover ~ .img-02 {
+    opacity: 1;
+    filter: blur(0);
+}
